organizando os assets

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-
+  <nav>
+    <a href="#" id="logo">
+      <img src="assets/" alt="">
+    </a>
+  </nav>
 </body>
 </html>
