--- a/index.html
+++ b/index.html
@@ -57,11 +57,12 @@
             <img src="assets/icons/Image.svg" alt="Ícone de imagem">
             <span>240 fotos</span>
           </li>
-
+          
         </ul>
       </div>
     </header>
-
+    </div>  
+    
     <main class="container">
       <img src="assets/images/Image 01.png" alt="...">
       <img src="assets/images/Image 02.png" alt="...">
@@ -76,6 +77,17 @@
       <img src="assets/images/Image 11.png" alt="...">
       <img src="assets/images/Image 12.png" alt="...">
     </main>
-  </div>  
+
+    <footer class="container">
+      <span>
+        Travelgram &copy; 2024
+      </span>
+      <span>
+        Termos de uso
+      </span>
+      <span>
+        Política de privacidade
+      </span>
+    </footer>
 </body>
 </html>
