--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <img src="assets/icons/MagnifyingGlass.svg" alt="Lupa">
           </a>
         </li>
-        <li><a href="#">Explorer</a></li>
-        <li><a href="#">Minhas viagens</a></li>
+        <li><a href="#" class="desktop-only" >Explorer</a></li>
+        <li><a href="#" class="desktop-only" >Minhas viagens</a></li>
         <li><a href="#">
           <img src="assets/Profile pic.png" alt="Foto de perfil">
         </a>
@@ -79,9 +79,9 @@
     </main>
 
     <footer class="container">
-      <span>
+      <p>
         Travelgram &copy; 2024
-      </span>
+      </p>
       <span>
         Termos de uso
       </span>
