--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -8,15 +9,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Travelgram</title>
   <link rel="stylesheet" href="styles/index.css">
-  
+
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <div class="bg-surface-color">
     <nav class="container">
-      <a href="#" id="logo">
-        <img src="assets/icons/Logo.svg" alt="Logomarca">
-      </a>
+      <img src="assets/icons/Logo.svg" alt="Logomarca">
 
       <ul id="primary-menu">
         <li>
@@ -24,12 +24,13 @@
             <img src="assets/icons/MagnifyingGlass.svg" alt="Lupa">
           </a>
         </li>
-        <li><a href="#" class="desktop-only" >Explorer</a></li>
-        <li><a href="#" class="desktop-only" >Minhas viagens</a></li>
-        <li><a href="#">
-          <img src="assets/Profile pic.png" alt="Foto de perfil">
-        </a>
-      </li>
+        <li><a href="#" class="desktop-only">Explorer</a></li>
+        <li><a href="#" class="desktop-only">Minhas viagens</a></li>
+        <li>
+          <a href="#">
+            <img src="assets/Profile pic.png" alt="Foto de perfil">
+          </a>
+        </li>
       </ul>
     </nav>
     <header>
@@ -39,8 +40,9 @@
           <div>
             <h1>Isabela Torres</h1>
             <p>
-              Amante de viagens, cultura e gastronomia. 🌍✈️  
-              Aqui compartilho as histórias registradas em cada clique, explorando cantinhos fascinantes do nosso planeta a partir da movimentada cidade de São Paulo. 🏙️📸
+              Amante de viagens, cultura e gastronomia. 🌍✈️
+              Aqui compartilho as histórias registradas em cada clique, explorando cantinhos fascinantes do nosso
+              planeta a partir da movimentada cidade de São Paulo. 🏙️📸
             </p>
           </div>
         </div>
@@ -57,37 +59,38 @@
             <img src="assets/icons/Image.svg" alt="Ícone de imagem">
             <span>240 fotos</span>
           </li>
-          
+
         </ul>
       </div>
     </header>
-    </div>  
-    
-    <main class="container">
-      <img src="assets/images/Image 01.png" alt="...">
-      <img src="assets/images/Image 02.png" alt="...">
-      <img src="assets/images/Image 03.png" alt="...">
-      <img src="assets/images/Image 04.png" alt="...">
-      <img src="assets/images/Image 05.png" alt="...">
-      <img src="assets/images/Image 06.png" alt="...">
-      <img src="assets/images/Image 07.png" alt="...">
-      <img src="assets/images/Image 08.png" alt="...">
-      <img src="assets/images/Image 09.png" alt="...">
-      <img src="assets/images/Image 10.png" alt="...">
-      <img src="assets/images/Image 11.png" alt="...">
-      <img src="assets/images/Image 12.png" alt="...">
-    </main>
+  </div>
 
-    <footer class="container">
-      <p>
-        Travelgram &copy; 2024
-      </p>
-      <span>
-        Termos de uso
-      </span>
-      <span>
-        Política de privacidade
-      </span>
-    </footer>
+  <main class="container">
+    <img src="assets/images/Image 01.png" alt="...">
+    <img src="assets/images/Image 02.png" alt="...">
+    <img src="assets/images/Image 03.png" alt="...">
+    <img src="assets/images/Image 04.png" alt="...">
+    <img src="assets/images/Image 05.png" alt="...">
+    <img src="assets/images/Image 06.png" alt="...">
+    <img src="assets/images/Image 07.png" alt="...">
+    <img src="assets/images/Image 08.png" alt="...">
+    <img src="assets/images/Image 09.png" alt="...">
+    <img src="assets/images/Image 10.png" alt="...">
+    <img src="assets/images/Image 11.png" alt="...">
+    <img src="assets/images/Image 12.png" alt="...">
+  </main>
+
+  <footer class="container">
+    <p>
+      Travelgram &copy; 2024
+    </p>
+    <span>
+      Termos de uso
+    </span>
+    <span>
+      Política de privacidade
+    </span>
+  </footer>
 </body>
+
 </html>
